--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,14 +9,14 @@
       ],
       "module": "ESNext",
       "skipLibCheck": true,
-      /* Bundler mode */
       "moduleResolution": "bundler",
       "allowImportingTsExtensions": true,
       "isolatedModules": true,
       "moduleDetection": "force",
       "noEmit": true,
+      "composite": true,
+      "declarationMap": true,
       "jsx": "react-jsx",
-      /* Linting */
       "strict": true,
       "noUnusedLocals": true,
       "noUnusedParameters": true,
